--- a/client/index.html
+++ b/client/index.html
@@ -18,22 +18,8 @@
       src="https://telegram.org/js/telegram-widget.js?22"
       data-telegram-login="grosery_bot"
       data-size="medium"
-      data-onauth="onTelegramAuth(user)"
+      data-auth-url="/"
       data-request-access="write"
     ></script>
-    <script type="text/javascript">
-      function onTelegramAuth(user) {
-        alert(
-          "Logged in as " +
-            user.first_name +
-            " " +
-            user.last_name +
-            " (" +
-            user.id +
-            (user.username ? ", @" + user.username : "") +
-            ")"
-        );
-      }
-    </script>
   </body>
 </html>
