--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,8 @@
       async
       src="https://telegram.org/js/telegram-widget.js?22"
       data-telegram-login="grosery_bot"
-      data-size="medium"
+      data-size="large"
+      data-radius="5"
       data-auth-url="/"
       data-request-access="write"
     ></script>
